# WazabiEDR_Agent

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md
.github/workflows/: release.yml
doc/reference/: config-reference.md  waza-rules.md
doc/usage/: configuring-shipper.md  installer-requirements.md  running-agent.md  testing-waza-hollowing.md
rules/: main.waza
scripts/: bootstrap.ps1
spool/: batch-1778248215-0.zst  batch-1778248216-1.zst  batch-1778248217-2.zst  batch-1778248218-3.zst  batch-1778248228-4.zst  batch-1778248238-5.zst  batch-1778248248-6.zst  batch-1778248258-7.zst  batch-1778248259-8.zst
src/: config.rs  enrich.rs  filter.rs  main.rs  service.rs  shutdown.rs  test_support.rs
src/control/: alerts.rs  client.rs  executor.rs  heartbeat.rs  mod.rs  sync.rs
src/detection/: actions.rs  event.rs  mod.rs  schema.rs
src/detection/waza/: ast.rs  engine.rs  parser.rs
src/etw/: amsi.rs  dns.rs  envelope.rs  mod.rs  powershell.rs  schannel.rs  tcp.rs  wmi.rs
src/ipc/: device.rs  events.rs  json.rs  mod.rs  parser.rs
src/plugin/: assignment.rs  identity.rs  manifest.rs  mod.rs  protocol.rs  server.rs  supervisor.rs
src/polling/: envelope.rs  mod.rs  services.rs  tasks.rs
src/shipper/: config.rs  enroll.rs  mod.rs  run.rs  secret.rs
src/spool/: file.rs  mod.rs  writer.rs
src/util/: mod.rs  strings.rs  time.rs
