[package]
name = "WazabiEDR_Agent"
version = "0.1.0"
edition = "2024"

[dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Time",
    "Win32_System_Console",
] }
# Used by the spool writer to compress sealed batches before they sit on
# disk waiting to be uploaded. Pure Rust API over zstd-sys.
zstd = "0.13"
